2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.cpp: XamlLoader::CreateDependencyObjectFromString/File:
	CreateFromString/File returns a Value instance, make sure we delete it,
	since we're returning the DO inside the Value instance.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.h: Add comments about what managed code must to do not leak the
	return value for a few methods.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* template.h:
	* uielement.h: Add comments about methods that always return reffed
	 elements.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* contentcontrol.cpp: OnPropertyChanged: ensure the element is alive
	until ElementRemoved has returned.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* frameworkelement.cpp: Keep a ref to default_template.

	* control.cpp: Keep a ref to template_root.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* value.cpp: value_free_value: don't crash if we're passed a null value

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* provider.cpp: InheritedPropertyValueProvider: always pass false
	as the set_parent flag to ProviderValueChanged.

2010-02-09  Chris Toshok  <toshok@ximian.com>

	* pal/gtk/pal-gtk.cpp (MapKeyvalToKey): sadly silverlight doesn't
	return usable Key values for many keys.  instead of (stupidly,
	imo) returns those values for NUMERIC KEYPAD keys only.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* textbox.cpp: delete, not g_object_unref, the MoonIMContext object.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Don't leak a Duration instance.

2010-02-09  Larry Ewing  <lewing@novell.com>

	* deepzoomimagetilesource.h: 
	* deepzoomimagetilesource.cpp: parse the ServerFormat from the
	information needed to support the SmoothStreaming url format.
	
	Get the olympics photo player working initially with the
	SmoothStreaming multiscale image logic.
	